# CarCardsOps

./: .env  .gitignore  Cargo.toml  README.md  bacon.toml
.sqlx/: query-15b002347cae536c70ecb9bad3ee8b5b82d3475c3151d0b372a7ce94bb55a374.json  query-16cda9238a1e08f6f67bbfc7dbaafdede154aa5bc65ecc4d4a4dae923910bb24.json  query-1ca3142683d2d35d1d219f611aa9c16a576ce89eeda9a0519ef99d703f8fe159.json  query-1f96ca2327e9cdf284bd682bf2df914043fb667bf754c42cb8e1a9479e67c7a3.json  query-225efea80055f2a79a1ada64b3d2d4dc7170d9d8c7fe9908dcf6a230e075fa3e.json  query-22ec6131795b5df2dbb35c4a40e661b49dc3d6d97fdb4c7f8766d7d0c4c6d7f7.json  query-252efdba4fb8dd50fb91bdd3f2f6619c20789f5e0b60c66dcf7396d765d4a238.json  query-2e28a2421d57997b07900a787a3df9e763c7d04ecb343f67f2e1c3843c3cf4f7.json  query-309419faf70c0c1c46005fd3e4658e56c2cb3e1337b53967adc76ecac685648f.json  query-3251d496589febc2da8db3dee3f1a91d63888c17849d683a3708f5c216525746.json  query-335d1517d5056dc57ee004ec18e2d49b37b324ad9340d63433d9e37dfc7e67e7.json  query-36ef77b6403dcc6b7b17ad8a0abf50ab24099715c1d87058c6d11104418ddf3a.json  query-443b29a20535c12175437e4f96bc31ebdf9164a2a98ac8e084b904e63b42c936.json  query-4659e40f694fae7e96884b2916677021ca0b58efc70f9c1db45abf9f066dec1e.json  query-4818d96cf98f6f9cfd70207a04777c15dff94a885a217a8b2230e7d0d207259f.json  query-4b3b616a9b581c601f2fb36da662c43c8ac13b3b545156c479a81ce52bf11467.json  query-4c11fb69be3de9e8de81c919af84b8c15bf6766c4f51f68268d6f3b70f506b88.json  query-51b3b2ddc68635c42116fd7321d510af3435e486cd78709dc2abf4a306bf89ce.json  (+20 more)
migrations/: 20230725213432_init.down.sql  (+1 more)
(+34 files in other folders)
