[package]
name = "carcards-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
color-eyre = "0.6.2"
dotenv = "0.15.0"
poem = { version = "1.3.57", features = ["static-files"] }
serde = { version = "1.0.175", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
